# age_of_innovation

./: .gitignore  Cargo.toml
aoi_backend/: Cargo.toml
aoi_backend/assets/: debug_map.gamemap
aoi_backend/src/: bonustile.rs  bookaction.rs  building.rs  common.rs  faction.rs  game.rs  gamelogic.rs  gamemap.rs  gamephase.rs  helpers.rs  internal.rs  lib.rs  map.rs  power.rs  pregame.rs  race.rs  resources.rs  scoringtile.rs
aoi_backend/src/gamelogic/: buildingplacement.rs
aoi_backend/src/gamephase/: buildingplacement.rs  incomephase.rs
aoi_server/: Cargo.toml
aoi_server/src/: main.rs
assets/: base_map.gamemap
src/: error.rs  gamemap.rs  lib.rs  power.rs
