[package]
name = "aoi_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
enum-iterator = "1.4.1"
itertools = "0.11.0"
parameterized="1.0.1"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"